[project]
name = "saleyo"
version = "1.3.0"
description = "Saleyo is a lightwight scalable Python AOP framework, easy to use and integrate."
authors = [{ name = "H2Sxxa", email = "h2sxxa0w0@gmail.com" }]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
Homepage = "https://pypi.org/project/saleyo/"
Repository = "https://github.com/H2Sxxa/saleyo"
Issues = "https://github.com/H2Sxxa/saleyo/issues"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
